1. Allow pipeline to be called multiple times without recreating. 2. Move HtmlFilterRoundtripTest to pipeline tests and rename FilterRoundtripTest 3. Update allHtmlTests and allPipelineTest to reflect above move
git-svn-id: https://okapi.googlecode.com/svn/trunk@1397 0cd2bb99-014b-0410-b875-5d0485b745ed